# MPC-Smart-Setup-Assistant

./: README.md
MPCAgent/: README.md  pyproject.toml
MPCAgent/backend_repository/: README.md
MPCAgent/backend_repository/aby/: backend.json  run_aby_job.py
MPCAgent/mpc_agent/: __init__.py  agent.py  api.py  cli.py  config.py  guidance.py  memory.py  normalization.py  prompts.py  schemas.py  structured_options.py  utils.py
MPCAgent/mpc_agent/backends/: __init__.py  (+4 more)
MPCAgent/scripts/: smoke_test.py
MPCAgent/tests/: test_agent.py  test_api.py  test_backends.py  test_memory.py  test_utils.py
mpc-agent-github/: README.md  mpc_agent_deepseek_smoke_cases.jsonl  pragmaticmpc.txt  pyproject.toml  server.py
mpc-agent-github/docs/: mpspdz_windows_build.md
mpc-agent-github/examples/: crypten_runtime.example.json  spu_runtime.example.json
mpc-agent-github/mpc_agent/: __init__.py  case_store.py  crypten_runner.py  crypten_runtime_driver.py  deepseek_client.py  knowledge_base.py  models.py  open_source_catalog.py  orchestrator.py  parser.py  policy.py  requirement_options.py  runtime_runner.py  runtime_signals.py  spdz_runner.py  spu_runner.py  spu_runtime_driver.py
mpc-agent-github/static/: app.js  index.html  styles.css
mpc-agent-github/tests/: test_case_store.py  test_crypten_runner.py  test_deepseek_client.py  test_external_api.py  test_knowledge_base.py  test_mcp_server.py  test_open_source_catalog.py  test_orchestrator.py  test_parser.py  test_policy.py  test_runtime_signals.py  test_skill_executor.py  test_skills.py  test_spdz_runner.py  test_spu_runner.py
(+46 files in other folders)
