[project]
name = "mpc-agent"
version = "0.1.0"
description = "A LangChain + DeepSeek agent that extracts MPC protocol configuration from natural language."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langchain>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-deepseek>=0.1.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
mpc-agent = "mpc_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mpc_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
